--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  
+  {{> _header}}
   <div class="container">
       {{{body}}}
   </div>
@@ -21,5 +21,12 @@
   crossorigin="anonymous">
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+   <script>
+     $(document).ready(() => {
+      $('.button-collapse').sideNav();
+    });
+
+   </script>
 </body>
 </html>
