--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -12,7 +12,7 @@
 
         <div class="card-content center-align">
           <h5>{{title}}</h5>
-          <p class="story-text">{{body}}</p>
+          <p class="story-text">{{stripTags (truncate body 150)}}</p>
           <br>
           <div class="chip">
             <img src="{{user.image}}">
@@ -23,7 +23,7 @@
         <div class="card-action center-align">
           <a class="btn grey" href="/stories/show/{{id}}">Read More</a>
         </div>
-        
+
       </div>
     </div>
   {{else}}
